@@ -1,5 +1,17 @@
 2018-01-17  Saam Barati  <sbarati@apple.com>
 
+        Disable Atomics when SharedArrayBuffer isn’t enabled
+        https://bugs.webkit.org/show_bug.cgi?id=181572
+        <rdar://problem/36553206>
+
+        Reviewed by Michael Saboff.
+
+        * runtime/JSGlobalObject.cpp:
+        (JSC::JSGlobalObject::init):
+        (JSC::createAtomicsProperty): Deleted.
+
+2018-01-17  Saam Barati  <sbarati@apple.com>
+
         Support MultiGetByOffset in the DFG
         https://bugs.webkit.org/show_bug.cgi?id=181466
 
