@@ -1,5 +1,15 @@
 2018-01-17  Saam Barati  <sbarati@apple.com>
 
+        Disable Atomics when SharedArrayBuffer isn’t enabled
+        https://bugs.webkit.org/show_bug.cgi?id=181572
+        <rdar://problem/36553206>
+
+        Reviewed by Michael Saboff.
+
+        * stress/isLockFree.js:
+
+2018-01-17  Saam Barati  <sbarati@apple.com>
+
         DFG::Node::convertToConstant needs to clear the varargs flags
         https://bugs.webkit.org/show_bug.cgi?id=181697
         <rdar://problem/36497332>
